--- a/src/css/_variables/_main.scss
+++ b/src/css/_variables/_main.scss
@@ -1,6 +1,6 @@
 $background: #ffffff;
 $background-negative: #35302C;
-$background-primary: #c57c51;
+$background-primary: #0044ff;
 $background-secondary: #A19C96;
 $background-tertiary: #d1cdca;
 // $background-quaternary: #ffffff;
@@ -10,7 +10,7 @@ $background-disabled: #ffffff;
 $background-dimmed: rgba(#ffffff, 0.08);
 $foreground: #35302C;
 $foreground-negative: #ffffff;
-$foreground-primary: #c57c51;
+$foreground-primary: #0044ff;
 $foreground-secondary: #A19C96;
 $foreground-tertiary: #d1cdca;
 // $foreground-quaternary: #000000;
@@ -18,7 +18,7 @@ $foreground-tertiary: #d1cdca;
 // $foreground-senary: #000000;
 $foreground-disabled: #000000;
 $foreground-dimmed: rgba(#000000, 0.5);
-$border: #35302C;
+$border: #ced1da;
 $shadow: rgba(53, 48, 44, .65);
 $black-10: rgba(16, 16, 16, .1);
 $black-20: rgba(16, 16, 16, .2);
