--- a/src/templates/shared/footer.html
+++ b/src/templates/shared/footer.html
@@ -1,5 +1,7 @@
 <footer class="footer" footer>
 	<div class="container">
-		<div>footer</div>
+		<div class="footer__content">
+			<div class="footer__title">footer</div>
+		</div>
 	</div>
 </footer>
