--- a/src/css/_components/_navs.scss
+++ b/src/css/_components/_navs.scss
@@ -37,7 +37,7 @@
 
 		&>a,
 		&>button {
-			@extend %btn;
+			@extend %btn-reset;
 		}
 	}
 }
@@ -57,18 +57,6 @@
 			@extend %nav-item;
 		}
 	}
-
-	/*
-	@include media-up(sm) {
-		display: flex;
-		justify-content: flex-start;
-	}
-
-	@include media-down(xs) {
-		display: block;
-		// margin-bottom: 100px;
-	}
-	*/
 }
 
 %nav-vertical {
@@ -91,23 +79,9 @@
 
 		&>a,
 		&>button {
-			@extend %btn;
+			@extend %btn-reset;
 		}
 	}
-
-	/*
-	@include media-up(sm) {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}
-
-	@include media-down(xs) {
-		display: block;
-		// margin-bottom: 100px;
-	}
-	*/
 }
 
 %nav-grid {
