--- a/src/css/_pages/_footer.scss
+++ b/src/css/_pages/_footer.scss
@@ -1,3 +1,14 @@
-footer {
-    min-height: 60vh;
+.footer {
+	&__content {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		min-height: 50vh;
+	}
+
+	&__title {
+		font-size: 50px;
+		text-align: center;
+	}
 }
