--- a/src/templates/shared/header.html
+++ b/src/templates/shared/header.html
@@ -1,8 +1,10 @@
 <header class="header" header>
-  <div class="container">
-    <ul class="nav--main">
-      <li><a href="/vite-config/index.html">Index</a></li>
-      <li><a href="/vite-config/contacts.html">Contacts</a></li>
-    </ul>
-  </div>
+	<div class="container">
+		<div class="header__content">
+			<ul class="nav--main">
+				<li><a href="/vite-config/index.html">Index</a></li>
+				<li><a href="/vite-config/contacts.html">Contacts</a></li>
+			</ul>
+		</div>
+	</div>
 </header>
