--- a/src/templates/forms/control-checkbox.html
+++ b/src/templates/forms/control-checkbox.html
@@ -1,4 +1,4 @@
-<div class="control full" control-checkbox field="{{ control.key }}">
+<div class="control full" data-control-checkbox data-field="{{ control.key }}">
 	<div class="control__field--checkbox">
 		<input type="checkbox" class="control__checkbox" value="true" id="{{ control.key }}">
 		<label for="{{ control.key }}">
