--- a/src/templates/forms/control-privacy.html
+++ b/src/templates/forms/control-privacy.html
@@ -1,4 +1,4 @@
-<div class="control full" control-privacy field="{{ control.key }}">
+<div class="control full" data-control-privacy data-field="{{ control.key }}">
 	<div class="control__field--privacy">
 		<div class="control__radios">
 			<input type="radio" class="control__checkbox" value="true" id="{{ control.key }}_true" name="{{ control.key }}">
