--- a/src/templates/forms/control-select.html
+++ b/src/templates/forms/control-select.html
@@ -1,4 +1,4 @@
-<div class="control" control-select field="{{ control.key }}">
+<div class="control" data-control-select data-field="{{ control.key }}">
 	<div class="control__field control__field--select">
 		<label for="{{ control.key }}">
 			<span>
