--- a/src/templates/forms/control-text.html
+++ b/src/templates/forms/control-text.html
@@ -1,4 +1,4 @@
-<div class="control" control-text field="{{ control.key }}">
+<div class="control" data-control-text data-field="{{ control.key }}">
 	<div class="control__field">
 		<label for="{{ control.key }}">
 			<span>
