--- a/src/templates/forms/control-textarea.html
+++ b/src/templates/forms/control-textarea.html
@@ -1,4 +1,4 @@
-<div class="control" control-textarea field="{{ control.key }}">
+<div class="control" data-control-textarea data-field="{{ control.key }}">
 	<div class="control__field--textarea">
 		<label for="{{ control.key }}">
 			<span>
