--- a/src/templates/shared/header.html
+++ b/src/templates/shared/header.html
@@ -1,4 +1,4 @@
-<header class="header" header>
+<header class="header" data-header>
 	<div class="container">
 		<div class="header__content">
 			<ul class="nav--main">
