--- a/src/css/_forms/_forms.scss
+++ b/src/css/_forms/_forms.scss
@@ -83,7 +83,7 @@ fieldset,
 		&>div:not(.full) {
 			@include as-col(6, 12, $gutter);
 
-			&[control-textarea] {
+			&[data-control-textarea] {
 				@include as-col(12, 12, $gutter);
 			}
 		}
@@ -97,7 +97,7 @@ fieldset,
 		&>div:not(.full) {
 			@include as-col(12, 12, $gutter);
 
-			&[control-textarea] {
+			&[data-control-textarea] {
 				@include as-col(12, 12, $gutter);
 			}
 		}
@@ -123,7 +123,7 @@ fieldset,
 		&>div:not(.full) {
 			@include as-col(4, 12, $gutter);
 
-			&[control-textarea] {
+			&[data-control-textarea] {
 				@include as-col(12, 12, $gutter);
 			}
 		}
@@ -137,7 +137,7 @@ fieldset,
 		&>div:not(.full) {
 			@include as-col(6, 12, $gutter);
 
-			&[control-textarea] {
+			&[data-control-textarea] {
 				@include as-col(12, 12, $gutter);
 			}
 		}
@@ -150,7 +150,7 @@ fieldset,
 		&>div:not(.full) {
 			@include as-col(12, 12, 0);
 
-			&[control-textarea] {
+			&[data-control-textarea] {
 				flex: 1 1 100%;
 				max-width: 100%;
 				margin-left: 0;
