--- a/src/templates/shared/footer.html
+++ b/src/templates/shared/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer" footer>
+<footer class="footer" data-footer>
 	<div class="container">
 		<div class="footer__content">
 			<div class="footer__title">footer</div>
