--- a/src/templates/shared/slider.html
+++ b/src/templates/shared/slider.html
@@ -1,6 +1,6 @@
 <div class="slider-hero">
 	<!-- slider -->
-	<div class="slider__container" slider>
+	<div class="slider__container" data-slider>
 		<!-- wrapper -->
 		<div class="slider__wrapper">
 			<!-- inner -->
