--- a/src/templates/forms/control-checkfield.html
+++ b/src/templates/forms/control-checkfield.html
@@ -1,3 +1,3 @@
-<div data-control-checkfield data-field="{{ control.key }}">
+<div class="control--checkfield" data-control-checkfield data-field="{{ control.key }}">
 	<input type="text" value="" name="{{ control.key }}">
 </div>
