--- a/src/css/_components/_modal.scss
+++ b/src/css/_components/_modal.scss
@@ -55,7 +55,11 @@
 
 .modal__header {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: space-between;
+}
+
+.modal__title {
+	font-weight: $font-bold;
 }
 
 .modal__inner {
